Fix 3th column wrap CSS bug for Firefox 4

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -116,7 +116,7 @@ article
       +top_shading
   #column0, #column1, #column2
     float: left
-    width: 30%
+    width: 29.5%
     padding-right: 2%
     border-right-color= !gray
     border-right-width= !vertical_width
@@ -154,7 +154,7 @@ article
         left: 9px
 
 aside
-  width: 26.5%
+  width: 26%
   float: right
   margin-right: 8%
   padding-left: 2%
